@@ -38,7 +38,6 @@ void quit_action_activate(GSimpleAction *action, GVariant *parameter, gpointer u
 void about_action_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void preferences_action_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void close_action_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
-void scripts_action_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data) ;
 void updates_action_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void doc_action_activate(GSimpleAction *action, GVariant *parameter, gpointer user_data);
 void full_screen_activated(GSimpleAction *action, GVariant *parameter, gpointer user_data);
