@@ -39,6 +39,7 @@ siril 1.4.0-beta4
 * Approved use of PyQt6 for creating python script GUIs (now confident it is problem free on all target OSes)
 * Added some plate solution-related keywords to FKeywords sirilpy class. (#1779)
 * Replaced the confusing clip/rescale popup with a heuristic that generally does the right thing. (!931)
+* Moved the "Get Scripts" menu entry to the Scripts menu, where it logically belongs. (!865)
 
 siril 1.4.0-beta3
 07/11/25
